@startuml types_diagram
scale 1.5
skinparam {
    shadowing false
    linetype ortho
    defaultFontSize 10
    padding 1
}

skinparam enum {
    BackgroundColor #E8F5E9
    BorderColor #4CAF50
}

skinparam class {
    BackgroundColor #FFF3E0
    BorderColor #FF9800
}

title Диаграмма типов данных

enum FaultModel {
    None
    StuckAt0
    StuckAt1
    BitFlip
    OpenRead
}

enum TestAlgorithm {
    WalkingOnes
    WalkingZeros
    MarchSimple
}

enum Theme {
    DeusEx
    Matrix
    GurrenLagann
    Cyberpunk
}

class InjectedFault {
    +model: FaultModel
    +addr: size_t
    +len: size_t
    +flip_probability: double
}

class TestResult {
    +addr: size_t
    +expected: Word
    +read: Word
    +passed: bool
}

class ThemeColors {
    +bgPrimary: QColor
    +bgSecondary: QColor
    +text: QColor
    +accent: QColor
    +tableBgEven: QColor
    +tableBgOdd: QColor
    +failedTestBg: QColor
    +passedTestBg: QColor
}

class Word {
    <<typedef>>
    +value: uint32_t
}

note right of Word : typedef uint32_t

InjectedFault --> FaultModel
TestResult --> Word
ThemeColors --> Theme

@enduml
